@@ -47,6 +47,7 @@ namespace MonoDevelop.Projects.Dom.Output
 		UseIntrinsicTypeNames    = 0x0200,
 		HighlightName            = 0x0400,
 		HideExtensionsParameter  = 0x0800,
+		HideGenericParameterNames= 0x1000,
 
 		ClassBrowserEntries        = IncludeReturnType | IncludeParameters | IncludeGenerics,
 		AssemblyBrowserDescription = IncludeGenerics | IncludeBaseTypes | IncludeReturnType | IncludeParameters | IncludeParameterName | IncludeMarkup | IncludeKeywords | IncludeModifiers 
