@@ -1,3 +1,12 @@
+2009-02-04  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs: Handle
+	  HideGenericParameterNames flag.
+
+	* MonoDevelop.Projects.Dom.Output/OutputFlags.cs:
+	* MonoDevelop.Projects.Dom.Output/OutputSettings.cs: Add a
+	  HideGenericParameterNames flag.
+
 2009-02-04  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
